[package]
name = "actmd"
version = "0.1.0"
authors = ["Jörg Sommer <joerg@jo-so.de>"]
edition = "2021"
description = "A parser and output generator for Markdown-like documents"
keywords = ["markdown", "md", "commonmark", "parser", "AST"]
categories = ["parser-implementations", "template-engine", "text-processing"]
repository = "https://gitlab.com/jo-so/actmd"
license = "Apache-2.0"

[workspace]
members = [
  "build-html-entities",
  "build-spec-tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
log = { version = "0.4.17", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
actmd = { path = ".", features = ["log"] }

[features]
location = []
