[package]
name = "build-html-entities"
workspace = ".."
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Jörg Sommer <joerg@jo-so.de>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["cargo"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
