[package]
name = "build-spec-tests"
workspace = ".."
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Jörg Sommer <joerg@jo-so.de>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.0.0-beta", features = ["cargo"] }
html5ever = "0.24.0"
percent-encoding = "2.0.0"
tendril = "0.4.0"
