[package]
name = "build-spec-tests"
workspace = ".."
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Jörg Sommer <joerg@jo-so.de>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["cargo"] }
html5ever = "0.24.1"
percent-encoding = "2.2.0"
tendril = "0.4.3"
